# laughter-detection

./: pyproject.toml  setup.py
laugh_detection.egg-info/: PKG-INFO  SOURCES.txt
laughter_detection/: requirements.txt
laughter_detection/main_module/: configs.py  laugh_segmenter.py  segment_laughter.py
laughter_detection/utils/: audio_utils.py  data_loaders.py  text_utils.py  torch_utils.py
