[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "laugh_detection"
version = "2.0.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Detect laughter within an audio file"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jrgillick/laughter-detection"
"Bug Tracker" = "https://github.com/jrgillick/laughter-detection/issues"