[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "laughter_detection"
version = "2.0.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Detect laughter within an audio file"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "librosa==0.9.1",
    "numpy==1.23.5",
    "torch==2.1.0",
    "tgt==1.4.4",
    "pyloudnorm==0.1.0",
    "praatio==3.8.0",
    "tensorboardX==2.6"
]

[project.urls]
"Homepage" = "https://github.com/jrgillick/laughter-detection"
"Bug Tracker" = "https://github.com/jrgillick/laughter-detection/issues"
